--- a/site/src/style/_index.scss
+++ b/site/src/style/_index.scss
@@ -1,3 +1,62 @@
+$black: #000;
+$white: white;
+
 body{
-  background-color: black;
+  .headerMario{
+    background-attachment: fixed;
+    background-color: $black;
+    // background-image: url('../../src/img/header.jpg');
+    background-position: center center;
+    background-size: cover;
+    color: $white;
+    cursor: pointer;
+    height: 100vh;
+    min-height: 40em;
+    padding: 50px 0;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+    &-lista{
+      align-items: center;
+      border-left: solid 1px rgba(192,192,192,0.35);
+      border-right: solid 1px rgba(192,192,192,0.35);
+      display: flex;
+      height: 30px;
+      justify-content: space-between;
+      margin: 0 auto;
+      padding: 0 10px;
+      position: relative;
+      width: 500px;
+      &:after, &:before{
+        border-bottom: solid 1px rgba(192,192,192,0.35);
+        border-top: solid 1px rgba(192,192,192,0.35);
+        content: '';
+        display: block;
+        height: 5px;
+        margin-top: -2px;
+        position: absolute;
+        top: 50%;
+        width: 300%;
+      }
+      &:after{
+        right: 100%;
+        margin-right: 1px;
+      }
+      &:before{
+        left: 100%;
+        margin-left: 1px;
+      }
+    }
+    &-item{
+      -moz-transition: color 0.35s ease-in-out,border-color 0.35s ease-in-out;
+      -ms-transition: color 0.35s ease-in-out,border-color 0.35s ease-in-out;
+      -webkit-transition: color 0.35s ease-in-out,border-color 0.35s ease-in-out;
+      border-radius: 0.5em;
+      border: solid 1px transparent;
+      display: inline-block;
+      margin: -9px 0.5em 0 0.5em;
+      padding: 0.85em;
+      transition: color 0.35s ease-in-out,border-color 0.35s ease-in-out;
+    }
+  }
 }
