--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -55,4 +55,23 @@
     padding: 0.85em;
     transition: color 0.35s ease-in-out,border-color 0.35s ease-in-out;
   }
+  &:after{
+    content: '';
+    background: #1C0920;
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    -moz-transition: opacity 2.5s ease-in-out;
+    -webkit-transition: opacity 2.5s ease-in-out;
+    -ms-transition: opacity 2.5s ease-in-out;
+    transition: opacity 2.5s ease-in-out;
+    -moz-transition-delay: 0.5s;
+    -webkit-transition-delay: 0.5s;
+    -ms-transition-delay: 0.5s;
+    transition-delay: 0.5s;
+  }
 }
